<resources>
    <string name="app_name">TreatYourShelf</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_member_text">Already a Member? Click to sign in.</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="email_header">Email:</string>
    <string name="phone_header">Phone Number:</string>
    <string name="summary">Summary</string>
    <string name="details">Details</string>
    <string name="isbn">ISBN:</string>
    <string name="owner">Owner:</string>
    <string name="current_borrower">Current Borrower:</string>
    <string name="image">Image</string>
    <string name="request_book">REQUEST BOOK</string>
    <string name="edit_button">edit_button</string>
    <string name="available_book">Available</string>
    <string name="unavailable_book">Unavailable</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="isbn_header">ISBN</string>
    <string name="owner_header">Owner</string>
    <string name="requested_by">Requested By:</string>
    <string name="book_image">book_image</string>
    <string name="accept">ACCEPT</string>
    <string name="decline">DECLINE</string>
    <string name="available">available</string>
    <string name="requested">requested</string>
    <string name="accepted">accepted</string>
    <string name="borrowed">borrowed</string>
    <string name="default_image">default image</string>
    <string name="view_requests">VIEW REQUESTS</string>
    <string name="status">Status</string>
    <string name="username">Username</string>
    <string name="username_header">Username:</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_activity_maps_fragment">Map</string>
</resources>