<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/book_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/cardview_dark_background"
        android:contentDescription="@string/book_image"
        android:scaleType="centerCrop"
        android:src="@drawable/no_image_icon" />

    <TableLayout
        android:id="@+id/book_details_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/request_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/requested_by"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/user_request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="user"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/title_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/title"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/book_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="title"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/author_header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:text="@string/author"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/book_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="author"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/isbn_header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:text="@string/isbn_header"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/book_isbn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="isbn"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/owner_header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:text="@string/owner_header"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/book_owner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="owner"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/status_header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:text="Status"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/book_request_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="status"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/book_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:text="Location"
                android:textSize="16sp" />

        </TableRow>
    </TableLayout>


    <LinearLayout
        android:id="@+id/request_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/accept_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rq_button"
            android:text="@string/accept"
            />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>

        <Button
            android:id="@+id/decline_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rq_button"
            android:text="@string/decline"
            />

    </LinearLayout>


    <Button
        android:id="@+id/give_book_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rq_button"
        android:layout_gravity="center_horizontal"
        android:text="GIVE BOOK"
        android:visibility="gone"
        />


    <LinearLayout
        android:id="@+id/borrower_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:visibility="gone"
        >

        <Button
            android:id="@+id/receive_book_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rq_button"
            android:text="RECEIVE BOOK"
            />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>

        <Button
            android:id="@+id/return_book_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rq_button"
            android:text="RETURN BOOK"
            />

    </LinearLayout>


</LinearLayout>