<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.BookDetails.BookDetailsDtab"
    android:id="@+id/book_details_table"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"

    android:stretchColumns="*">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:gravity="center">

        <TextView
            android:id="@+id/isbn_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:text="@string/isbn"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/book_isbn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="end"
            android:text="123456789"
            android:textColor="#000000"
            android:textSize="18sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/owner_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/owner"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/book_owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="OWNER"
            android:textColor="#000000"
            android:textSize="18sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/borrower_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/current_borrower"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/book_borrower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="NONE"
            android:textColor="#000000"
            android:textSize="18sp" />
    </TableRow>


</TableLayout>